0.7.4 / 
[Alexandr Topilski]
- Rename command
- Advanced options for execute command
- Watch key

0.7.3 / October 1, 2016
[Alexandr Topilski]
- [LevelDB] Use folder as db path
- [RocksDB] Use folder as db path
- [LMDB] Use folder as db path
- [Redis] Select db from console
- Console key(set/del/ttl) handling

0.7.2 / September 17, 2016
[Alexandr Topilski]
- [Redis] Set ttl context menu
- [Memcached] EXPIRE function

0.7.1 / August 6, 2016
[Alexandr Topilski]
- [Memcached] content database and keys functionality
- [Memcached] content database and keys functionality
- [Memcached] DBKCOUNT function
- Statitstics module
- Long size command fixes
- Ui bug fixes

0.7.0 / Jule 17, 2016
[Alexandr Topilski]
- [Redis] Stable sentinel connection
- [Redis] Stable cluster connection
- Stable create keys dialog

0.6.3 / Jule 9, 2016
[Alexandr Topilski]
- [Redis] Commands update
- [SSDB] Up sources to version 1.9.3
- [SSDB] DBKCOUNT command
- [RocksDB] Up sources to version 4.8.0
- Update QScintilla to version 2.9.2
- Update libssh2 to version libssh 1.7.0
- Crash application on running "Discovery" under Sentinel Connection #6 

0.6.2 / May 7, 2016
[Alexandr Topilski]
- [Redis] Sentinel support

0.6.1 / April 30, 2016
[Alexandr Topilski]
- [Memcached] Not connected to server, impossible to get discovery info #4
- Server roles
- Clear database
- Property to change font globally
- Config version
- Folders for connections
- Keys namespaces

0.5.8 / Fabruary 20, 2016
[Alexandr Topilski]
- [UnQLite] Save data propertly
- [UnQLite] Info command
- [LevelDB] Stable on windows
- [LMDB] Info command
- Commands refactoring
- Fix some memory leaks

0.5.7 / January 7, 2016
[Alexandr Topilski]
- [Redis] Redis cluster discovery button doesn't work with protected Redis configuration #59 
- [Redis] Edit existing connection settings doesn't show existing parameter values #58
- [Redis] Up hiredis sources to version 0.13.3
- [LMDB] Up sources to version 0.9.70
- [LevelDB] Up sources to version 1.18