@@ -168,7 +168,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(2, 0, 0),
                   UNDEFINED_EXAMPLE_STR,
                   1,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("BRPOP",
                   "<key> [key ...] timeout",
@@ -178,7 +178,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(2, 0, 0),
                   UNDEFINED_EXAMPLE_STR,
                   1,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("BRPOPLPUSH",
                   "source destination timeout",
@@ -207,8 +207,8 @@ static const std::vector<CommandHolder> redisCommands = {
                   "Kill the connection of a client",
                   PROJECT_VERSION_GENERATE(2, 4, 0),
                   UNDEFINED_EXAMPLE_STR,
-                  1,
                   0,
+                  9,
                   &common_exec_off2),
     CommandHolder("CLIENT LIST",
                   "-",
@@ -375,7 +375,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(3, 0, 0),
                   UNDEFINED_EXAMPLE_STR,
                   2,
-                  1,
+                  2,
                   &common_exec_off2),
     CommandHolder("CLUSTER SLAVES",
                   "<node-id>",
@@ -417,7 +417,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(2, 8, 13),
                   UNDEFINED_EXAMPLE_STR,
                   1,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec_off2),
     CommandHolder("COMMAND",
                   "-",
@@ -545,7 +545,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(2, 6, 0),
                   UNDEFINED_EXAMPLE_STR,
                   2,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("EVALSHA",
                   "sha1 numkeys <key> [key ...] <arg> [arg ...]",
@@ -553,7 +553,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(2, 6, 0),
                   UNDEFINED_EXAMPLE_STR,
                   2,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("EXEC",
                   "-",
@@ -569,7 +569,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(1, 0, 0),
                   UNDEFINED_EXAMPLE_STR,
                   1,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("EXPIRE",
                   "<key> <seconds>",
@@ -621,7 +621,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   UNDEFINED_SINCE,
                   UNDEFINED_EXAMPLE_STR,
                   3,
-                  0,
+                  1,
                   &common_exec),
     CommandHolder("GEOHASH",
                   "key member [member ...]",
@@ -630,7 +630,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   UNDEFINED_SINCE,
                   UNDEFINED_EXAMPLE_STR,
                   2,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("GEOPOS",
                   "key member [member ...]",
@@ -639,7 +639,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   UNDEFINED_SINCE,
                   UNDEFINED_EXAMPLE_STR,
                   2,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
 
     CommandHolder("GEORADIUS",
@@ -654,7 +654,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   UNDEFINED_SINCE,
                   UNDEFINED_EXAMPLE_STR,
                   5,
-                  0,
+                  6,
                   &common_exec),
     CommandHolder("GEORADIUSBYMEMBER",
                   "key member radius m|km|ft|mi "
@@ -667,7 +667,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   UNDEFINED_SINCE,
                   UNDEFINED_EXAMPLE_STR,
                   4,
-                  0,
+                  6,
                   &common_exec),
     CommandHolder("GET",
                   "<key>",
@@ -709,7 +709,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(2, 0, 0),
                   UNDEFINED_EXAMPLE_STR,
                   2,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("HEXISTS",
                   "<key> <field>",
@@ -775,7 +775,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(2, 0, 0),
                   UNDEFINED_EXAMPLE_STR,
                   2,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("HMSET",
                   "<key> <field> <value> [field value ...]",
@@ -783,7 +783,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(2, 0, 0),
                   UNDEFINED_EXAMPLE_STR,
                   3,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("HSCAN",
                   "<key> <cursor> [MATCH pattern] [COUNT count]",
@@ -917,7 +917,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(1, 0, 0),
                   UNDEFINED_EXAMPLE_STR,
                   2,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("LPUSHX",
                   "<key> <value>",
@@ -967,7 +967,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(1, 0, 0),
                   UNDEFINED_EXAMPLE_STR,
                   1,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("MIGRATE",
                   "<host> <port> <|"
@@ -1002,7 +1002,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(1, 0, 1),
                   UNDEFINED_EXAMPLE_STR,
                   2,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("MSETNX",
                   "<key> <value> [key value ...]",
@@ -1011,7 +1011,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(1, 0, 1),
                   UNDEFINED_EXAMPLE_STR,
                   2,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("MULTI",
                   "-",
@@ -1027,7 +1027,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(2, 2, 3),
                   UNDEFINED_EXAMPLE_STR,
                   1,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("PERSIST",
                   "<key>",
@@ -1062,7 +1062,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(2, 8, 9),
                   UNDEFINED_EXAMPLE_STR,
                   2,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("PFCOUNT",
                   "<key> [key ...]",
@@ -1072,7 +1072,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(2, 8, 9),
                   UNDEFINED_EXAMPLE_STR,
                   1,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("PFMERGE",
                   "<destkey> <sourcekey> [sourcekey ...]",
@@ -1080,7 +1080,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(2, 8, 9),
                   UNDEFINED_EXAMPLE_STR,
                   2,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("PING",
                   "[message]",
@@ -1106,7 +1106,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(2, 0, 0),
                   UNDEFINED_EXAMPLE_STR,
                   1,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &subscribe),
     CommandHolder("PTTL",
                   "<key>",
@@ -1130,7 +1130,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(2, 8, 0),
                   UNDEFINED_EXAMPLE_STR,
                   1,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("PUNSUBSCRIBE",
                   "[pattern [pattern ...]]",
@@ -1140,7 +1140,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(2, 0, 0),
                   UNDEFINED_EXAMPLE_STR,
                   0,
-                  1,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("QUIT",
                   "-",
@@ -1199,7 +1199,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(2, 6, 0),
                   UNDEFINED_EXAMPLE_STR,
                   3,
-                  0,
+                  1,
                   &common_exec),
     CommandHolder("ROLE",
                   "-",
@@ -1207,7 +1207,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   "context of replication",
                   PROJECT_VERSION_GENERATE(2, 8, 12),
                   UNDEFINED_EXAMPLE_STR,
-                  1,
+                  0,
                   0,
                   &common_exec),
     CommandHolder("RPOP",
@@ -1234,7 +1234,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(1, 0, 0),
                   UNDEFINED_EXAMPLE_STR,
                   2,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("RPUSHX",
                   "<key> <value>",
@@ -1250,7 +1250,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(1, 0, 0),
                   UNDEFINED_EXAMPLE_STR,
                   2,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("SAVE",
                   "-",
@@ -1291,7 +1291,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(2, 6, 0),
                   UNDEFINED_EXAMPLE_STR,
                   1,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec_off2),
     CommandHolder("SCRIPT FLUSH",
                   "-",
@@ -1325,7 +1325,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(1, 0, 0),
                   UNDEFINED_EXAMPLE_STR,
                   1,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("SDIFFSTORE",
                   "<destination> <key> [key ...]",
@@ -1333,8 +1333,8 @@ static const std::vector<CommandHolder> redisCommands = {
                   "resulting set in a key",
                   PROJECT_VERSION_GENERATE(1, 0, 0),
                   UNDEFINED_EXAMPLE_STR,
-                  1,
-                  0,
+                  2,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("SELECT",
                   "<index>",
@@ -1351,7 +1351,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(1, 0, 0),
                   UNDEFINED_EXAMPLE_STR,
                   2,
-                  3,
+                  5,
                   &set),
     CommandHolder("SETBIT",
                   "<key> <offset> <value>",
@@ -1403,7 +1403,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(1, 0, 0),
                   UNDEFINED_EXAMPLE_STR,
                   1,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("SINTERSTORE",
                   "<destination> <key> [key ...]",
@@ -1412,7 +1412,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(1, 0, 0),
                   UNDEFINED_EXAMPLE_STR,
                   2,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("SISMEMBER",
                   "<key> <member>",
@@ -1437,7 +1437,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(2, 2, 12),
                   UNDEFINED_EXAMPLE_STR,
                   1,
-                  0,
+                  1,
                   &common_exec),
     CommandHolder("SMEMBERS",
                   "<key>",
@@ -1464,7 +1464,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(1, 0, 0),
                   UNDEFINED_EXAMPLE_STR,
                   1,
-                  6,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("SPOP",
                   "<key> [count]",
@@ -1489,7 +1489,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(1, 0, 0),
                   UNDEFINED_EXAMPLE_STR,
                   2,
-                  1,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("SSCAN",
                   "<key> <cursor> [MATCH pattern] [COUNT count]",
@@ -1514,7 +1514,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(2, 0, 0),
                   UNDEFINED_EXAMPLE_STR,
                   1,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &subscribe),
     CommandHolder("SUNION",
                   "<key> [key ...]",
@@ -1522,7 +1522,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(1, 0, 0),
                   UNDEFINED_EXAMPLE_STR,
                   1,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("SUNIONSTORE",
                   "<destination> <key> [key ...]",
@@ -1531,7 +1531,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(1, 0, 0),
                   UNDEFINED_EXAMPLE_STR,
                   2,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("SYNC",
                   "-",
@@ -1580,7 +1580,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(2, 0, 0),
                   UNDEFINED_EXAMPLE_STR,
                   0,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("UNWATCH",
                   "-",
@@ -1591,7 +1591,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   0,
                   &common_exec),
     CommandHolder("WAIT",
-                  "numslaves timeout",
+                  "<numslaves> <timeout>",
                   "Wait for the synchronous replication of "
                   "all the write "
                   "commands sent in the "
@@ -1608,7 +1608,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(2, 2, 0),
                   UNDEFINED_EXAMPLE_STR,
                   1,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("ZADD",
                   "<key> [NX|XX] [CH] [INCR] <score> "
@@ -1619,7 +1619,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(1, 2, 0),
                   UNDEFINED_EXAMPLE_STR,
                   3,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("ZCARD",
                   "<key>",
@@ -1656,7 +1656,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(2, 0, 0),
                   UNDEFINED_EXAMPLE_STR,
                   3,
-                  2,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("ZLEXCOUNT",
                   "<key> <min> <max>",
@@ -1694,7 +1694,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(1, 0, 5),
                   UNDEFINED_EXAMPLE_STR,
                   3,
-                  3,
+                  4,
                   &common_exec),
     CommandHolder("ZRANK",
                   "<key> <member>",
@@ -1710,7 +1710,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(1, 2, 0),
                   UNDEFINED_EXAMPLE_STR,
                   2,
-                  0,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
     CommandHolder("ZREMRANGEBYLEX",
                   "<key> <min> <max>",
@@ -1758,7 +1758,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(2, 8, 9),
                   UNDEFINED_EXAMPLE_STR,
                   3,
-                  1,
+                  3,
                   &common_exec),
     CommandHolder("ZREVRANGEBYSCORE",
                   "<key> <max> <min> [WITHSCORES] [LIMIT "
@@ -1769,7 +1769,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(2, 2, 0),
                   UNDEFINED_EXAMPLE_STR,
                   3,
-                  2,
+                  4,
                   &common_exec),
     CommandHolder("ZREVRANK",
                   "<key> <member>",
@@ -1809,7 +1809,7 @@ static const std::vector<CommandHolder> redisCommands = {
                   PROJECT_VERSION_GENERATE(2, 0, 0),
                   UNDEFINED_EXAMPLE_STR,
                   3,
-                  3,
+                  INFINITE_COMMAND_ARGS,
                   &common_exec),
 
     CommandHolder("SENTINEL MASTERS",
