@@ -3,6 +3,8 @@
 - Rename command
 - Advanced options for execute command
 - Watch key
+- Edit key menu
+- Check command args
 
 0.7.3 / October 1, 2016
 [Alexandr Topilski]
